# zebbern-kali-mcp

./: .dockerignore  .gitignore  .pylintrc  BUG_REPORT.md  Dockerfile  MANIFEST.in  README.md  docker-compose.host.yml  docker-compose.yml  entrypoint.sh  install.py  install.sh  mcp_server.py  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements.txt  sync-to-kali.ps1  test_exec.sh
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  lint.yml  security-scan.yml
docs/: api-reference.md  architecture.md  configuration.md  contributing.md  docker-install.md  index.md  installation.md  security.md  tools-reference.md  troubleshooting.md  vm-install.md  workflows.md
mcp_tools/: __init__.py  _client.py  ad_tools.py  api_security.py  browser.py  callback_catcher.py  command_exec.py  ctf_platform.py  evidence_collector.py  exploit_suggester.py  file_operations.py  hosts_management.py  js_analyzer.py  kali_tools.py  metasploit.py  network_pivot.py  output_parser.py  payload_generator.py  reverse_shell.py  session_manager.py  ssh_manager.py  target_database.py  vpn.py  web_fingerprinter.py
vpn/: README.md
zebbern-kali/: kali_server.py
zebbern-kali/api/: __init__.py  routes.py
zebbern-kali/core/: __init__.py  ad_tools.py  api_security.py  callback_catcher.py  command_executor.py  config.py  ctf_platform.py  evidence_collector.py  exploit_suggester.py  hosts_manager.py  js_analyzer.py  metasploit_manager.py  network_pivot.py  payload_generator.py  reverse_shell_manager.py  session_manager.py  ssh_manager.py  target_database.py  tool_config.py  (+2 more)
(+30 files in other folders)
