[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zebbern-kali-mcp"
version = "1.0.0"
description = "MCP server for Kali Linux security tools — connects AI agents to 145+ pentest tools via Docker"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Zebbern"},
]
keywords = ["mcp", "kali", "security", "pentest", "ai-agent", "copilot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=0.9.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/zebbern/zebbern-kali-mcp"
Documentation = "https://zebbern.github.io/zebbern-kali-mcp"
Repository = "https://github.com/zebbern/zebbern-kali-mcp"
Issues = "https://github.com/zebbern/zebbern-kali-mcp/issues"

[project.scripts]
zebbern-kali-mcp = "mcp_server:main"

[tool.setuptools]
py-modules = ["mcp_server"]

[tool.setuptools.packages.find]
include = ["mcp_tools*"]
